Fix overflow in mentor block

--- a/css/index.css
+++ b/css/index.css
@@ -15,10 +15,6 @@ html {
   border-radius: 0.2857rem;
 }
 
-#mentor p {
-  text-align: justify;
-}
-
 #mentor .button {
   margin-top: 1em;
 }
